--- a/app/views/spree/manage/users/edit.html.erb
+++ b/app/views/spree/manage/users/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Contact Information</h1>
+<h1> Edit Contact Information</h1>
 <div class="contact-form">
-  <%= form_for @user, url: account_users_url do |f| %>
+  <%= form_for @user, url: manage_account_user_url(@user) do |f| %>
     <%= render partial: "form", locals: {f: f} %>
     <div class="clear"></div>
     <div class="actions">
-      <%= f.submit "Save", class: "update-contact" %>
+      <button class="update-contact">Update</button>
     </div>
   <% end %>
   <div class="clear"></div>
