Adding product image mgmt functionality. Formatting task remaining.

--- a/app/views/spree/manage/products/show.html.erb
+++ b/app/views/spree/manage/products/show.html.erb
@@ -21,6 +21,7 @@
 			<div class="row">
 				<div class="col1">
 					<%= render :partial => 'image' %>
+					<%= link_to "edit", manage_product_images_url(@product) %>
 
 					<p class="desc"><b>Allergans:</b> Gluten</p>
 					<p class="desc"><b></b> Eggs</p>
