--- a/app/views/spree/manage/customers/new.html.erb
+++ b/app/views/spree/manage/customers/new.html.erb
@@ -1,7 +1,11 @@
 
 <div class="customer-edit">
-<%= form_for @customer, url: manage_customers_url do |f| %>
+<%= form_for @account, url: manage_customers_url do |f| %>
+  <%= render partial: 'account_form', locals: {f: f} %>
   <%= render partial: 'spree/manage/customers/customer_form', locals: { f: f } %>
+  <div class="actions">
+    <%= f.submit class: "update-customer"%>
+  </div>
 <% end %>
   <div class="clear"></div>
 </div>
