Add account information on customer show in manage portal

--- a/app/views/spree/manage/customers/_account_form.html.erb
+++ b/app/views/spree/manage/customers/_account_form.html.erb
@@ -13,9 +13,9 @@
   <div class="form-group">
     <%= f.label :discount_type, "Discount Type" %>
     <%= f.select(:discount_type) do %>
-      <option value="discount" selected="selected">Discount Percentage</option>
-      <option value="percent_over" selected="selected">Percentage Over Cost</option>
-      <option value="none" selected="selected">None</option>
+      <option value="discount">Discount Percentage</option>
+      <option value="percent_over">Percentage Over Cost</option>
+      <option value="none">None</option>
     <% end %>
   </div>
 
