Add customer users in manage/customer#show

--- a/app/views/spree/cust/customers/show.html.erb
+++ b/app/views/spree/cust/customers/show.html.erb
@@ -2,7 +2,7 @@
   <a href="<%= edit_account_url %>" class="edit-link">(Edit)</a>
 </h1>
 <div class="clear"></div>
-<h3 id="account-id">Account #<%= @customer.account_id %> </h3>
+<h3 id="account-id">Account #<%= @customer.spree_account_id %> </h3>
 
 <div class="manage-customer">
   <section class="customer-account-info">
