Update customer side menu

--- a/app/views/spree/cust/shared/side_menu/category/_orders.html.erb
+++ b/app/views/spree/cust/shared/side_menu/category/_orders.html.erb
@@ -1,6 +1,6 @@
 
   <h3>
-    <%=image_tag("spree/manage/img/nav-ico3.png")%>
+    <%=image_tag("spree/manage/img/cart.png")%>
     <span class="tablet-hide">Orders
        <i class="fa fa-angle-left"></i>
      </span>
