--- a/app/views/spree/cust/shared/side_menu/category/_vendors.html.erb
+++ b/app/views/spree/cust/shared/side_menu/category/_vendors.html.erb
@@ -1,7 +1,6 @@
-
 <h3>
   <%=image_tag("spree/manage/img/customers.png")%>
-  <span class="tablet-hide">Vendors
+  <span class="tablet-hide">My Vendors
      <i class="fa fa-angle-left"></i>
    </span>
 </h3>
