Add basic account info on vendor index page

--- a/app/views/spree/cust/shared/_head.html.erb
+++ b/app/views/spree/cust/shared/_head.html.erb
@@ -18,6 +18,7 @@
 
 <%= stylesheet_link_tag 'application' %>
 <%= stylesheet_link_tag 'spree/manage/all' %>
+<%= stylesheet_link_tag 'spree/cust/all' %>
 
 <%= javascript_include_tag 'spree/manage/all' %>
 <%#= render "spree/admin/shared/translations" %>
