remove shadow effect on table header

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -333,9 +333,9 @@ img{
     background: #FFF;
     height: 52px;
     z-index: 30;
-    -webkit-box-shadow: 0px 1px 8px #ccc;
-	-moz-box-shadow: 0px 1px 8px #ccc;
-	box-shadow: 0px 1px 8px #ccc;
+  //   -webkit-box-shadow: 0px 1px 8px #ccc;
+	// -moz-box-shadow: 0px 1px 8px #ccc;
+	// box-shadow: 0px 1px 8px #ccc;
 }
 .header .logo {
 	position: absolute;
