--- a/app/views/spree/cust/receivings/edit.html.erb
+++ b/app/views/spree/cust/receivings/edit.html.erb
@@ -2,17 +2,17 @@
 <div class="inventory-page-block receiving-page-block">
 	<div class="receiving-header-block">
 		<div class="col1">
-			Sysco <a href="" class="cta-link" id="expand_all">Expand all</a>
+			<%= @order.vendor.name %> <a href="" class="cta-link" id="expand_all">Expand all</a>
 		</div>
 		<div class="col2">
 			<div class="orders-nav">
 				<a href="#" class="nav-left"><i class="fa fa-chevron-left"></i></a>
-				<span class="order-id">Order # 1147259704</span>
+				<span class="order-id">Order # <%= @order.number %></span>
 				<a href="#" class="nav-right"><i class="fa fa-chevron-right"></i></a>
 			</div>
 		</div>
 		<div class="col3">
-			<p>Delivery Date: <b>10/20/2015</b></p>
+			<p>Delivery Date: <b><%= @order.delivery_date.to_date.to_formatted_s(:long) %></b></p>
 		</div>
 		<div class="clear"></div>
 	</div>
@@ -48,39 +48,27 @@
 				</div>
 			</div>
 			<div class="order-items-block">
-				<div class="order-items-el" id="meat/seafood">
-					<a href="#" class="order-items-toggle disable rotate">Meat / Seafood <i class="fa fa-chevron-down"></i></a>
+				<div class="order-items-el" id="category_name_goes_here">
+					<a href="" class="order-items-toggle disable rotate">Category Name <i class="fa fa-chevron-down"></i></a>
 					<div class="order-items-cont">
-						<div class="order-item">
-							<div class="cel">Snow Crab</div>
-							<div class="cel">11248</div>
-							<div class="cel">30#</div>
-							<div class="cel">$180.00</div>
-							<div class="cel">3</div>
-							<div class="cel">3</div>
-							<div class="cel">$540.00</div>
-							<div class="cel">
-								<div class="qty-block">
-									<div class="spin"><span class="minus"><i class="fa fa-minus"></i></span><input value="3" placeholder="Qty" class="qty_input"/><span class="plus"><i class="fa fa-plus"></i></span></div>
+						<% @order.line_items.each do |line_item| %>
+							<% variant = line_item.variant %>
+							<div class="order-item">
+								<div class="cel"><%= variant.product.name %></div>
+								<div class="cel">#<%= variant.sku %></div>
+								<div class="cel"><%= variant.pack_size %></div>
+								<div class="cel"><%= number_to_currency(variant.price) %></div>
+								<div class="cel"><%= line_item.quantity %></div>
+								<div class="cel"> qty </div>
+								<div class="cel">ship total</div>
+								<div class="cel">
+									<div class="qty-block">
+										<div class="spin"><span class="minus"><i class="fa fa-minus"></i></span><input value="3" placeholder="Qty" class="qty_input"/><span class="plus"><i class="fa fa-plus"></i></span></div>
+									</div>
 								</div>
+								<div class="cel"><input type="checkbox"></div>
 							</div>
-							<div class="cel"><input type="checkbox"></div>
-						</div>
-						<div class="order-item">
-							<div class="cel">Chicken Breast Rnd</div>
-							<div class="cel">11248</div>
-							<div class="cel">4/10#</div>
-							<div class="cel">$60.00</div>
-							<div class="cel">5</div>
-							<div class="cel">5</div>
-							<div class="cel">$340.00</div>
-							<div class="cel">
-								<div class="qty-block">
-									<div class="spin"><span class="minus"><i class="fa fa-minus"></i></span><input value="5" placeholder="Qty" class="qty_input"/><span class="plus"><i class="fa fa-plus"></i></span></div>
-								</div>
-							</div>
-							<div class="cel"><input type="checkbox"></div>
-						</div>
+						<% end %>
 					</div>
 					<div class="order-items-count-block">
 						<div class="col1">
@@ -88,72 +76,6 @@
 						</div>
 						<div class="col2">
 							<p class="category-total">Category Total: <span class="count-val">$840.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="order-items-el" id="produce">
-					<a href="#" class="order-items-toggle disable rotate">Produce <i class="fa fa-chevron-down"></i></a>
-					<div class="order-items-cont">
-						<div class="order-item">
-							<div class="cel">Chicken Breast Rnd</div>
-							<div class="cel">11248</div>
-							<div class="cel">4/10#</div>
-							<div class="cel">$60.00</div>
-							<div class="cel">5</div>
-							<div class="cel">5</div>
-							<div class="cel">$340.00</div>
-							<div class="cel">
-								<div class="qty-block">
-									<div class="spin"><span class="minus"><i class="fa fa-minus"></i></span><input value="5" placeholder="Qty" class="qty_input"/><span class="plus"><i class="fa fa-plus"></i></span></div>
-								</div>
-							</div>
-							<div class="cel"><input type="checkbox"></div>
-						</div>
-					</div>
-					<div class="order-items-count-block">
-						<div class="col1">
-							<p class="total-count">Category Count: <span class="count-val">8</span></p>
-						</div>
-						<div class="col2">
-							<p class="total-price">Category Total: <span class="count-val">$20</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="order-items-el" id="dairy">
-					<a href="#" class="order-items-toggle disable rotate">Dairy <i class="fa fa-chevron-down"></i></a>
-					<div class="order-items-cont">
-						<div class="order-item">
-							<div class="cel">Chicken Breast Rnd</div>
-							<div class="cel">11248</div>
-							<div class="cel">4/10#</div>
-							<div class="cel">$60.00</div>
-							<div class="cel">5</div>
-							<div class="cel">5</div>
-							<div class="cel">$340.00</div>
-							<div class="cel">
-								<div class="qty-block">
-									<div class="spin"><span class="minus"><i class="fa fa-minus"></i></span><input value="5" placeholder="Qty" class="qty_input"/><span class="plus"><i class="fa fa-plus"></i></span></div>
-								</div>
-							</div>
-							<div class="cel"><input type="checkbox"></div>
-						</div>
-					</div>
-					<div class="order-items-count-block">
-						<div class="col1">
-							<p class="total-count">Category Count: <span class="count-val">8</span></p>
-						</div>
-						<div class="col2">
-							<p class="total-price">Category Total: <span class="count-val">$0</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="order-items-total-count" id="total_count">
-					<div class="order-items-count-block">
-						<div class="col1">
-							<p class="total-count">Total Count: <span class="count-val">24</span></p>
-						</div>
-						<div class="col2">
-							<p class="total-price">Category Total: <span class="count-val">$860</span></p>
 						</div>
 					</div>
 				</div>
