--- a/app/views/spree/cust/receivings/edit.html.erb
+++ b/app/views/spree/cust/receivings/edit.html.erb
@@ -16,7 +16,8 @@
 		</div>
 		<div class="clear"></div>
 	</div>
-	<form action="#" id="receiving-form">
+	<!-- <form action="#" id="receiving-form"> -->
+	<%= form_for @order, url: order_receiving_url(@order) do |f|%>
 		<div class="inventory-list-table">
 			<div class="header">
 				<div class="cel">
@@ -51,7 +52,10 @@
 				<div class="order-items-el" id="category_name_goes_here">
 					<a href="" class="order-items-toggle disable rotate">Category Name <i class="fa fa-chevron-down"></i></a>
 					<div class="order-items-cont">
+						<% category_count, category_total = 0, 0 %>
 						<% @order.line_items.each do |line_item| %>
+						<% category_count += line_item.shipped_qty %>
+						<% category_total += line_item.shipped_qty * line_item.price %>
 							<% variant = line_item.variant %>
 							<div class="order-item">
 								<div class="cel"><%= variant.product.name %></div>
@@ -59,23 +63,26 @@
 								<div class="cel"><%= variant.pack_size %></div>
 								<div class="cel"><%= number_to_currency(variant.price) %></div>
 								<div class="cel"><%= line_item.quantity %></div>
-								<div class="cel"> qty </div>
-								<div class="cel">ship total</div>
+								<div class="cel"><%= line_item.shipped_qty %> </div>
+								<div class="cel"><%= number_to_currency(line_item.shipped_total) %></div>
 								<div class="cel">
 									<div class="qty-block">
-										<div class="spin"><span class="minus"><i class="fa fa-minus"></i></span><input value="3" placeholder="Qty" class="qty_input"/><span class="plus"><i class="fa fa-plus"></i></span></div>
+										<div class="spin">
+											<span class="minus"><i class="fa fa-minus"></i></span>
+											<input type="number" name="" value="<%= line_item.received_qty %>" placeholder="Qty" class="qty_input"/>
+											<span class="plus"><i class="fa fa-plus"></i></span></div>
 									</div>
 								</div>
-								<div class="cel"><input type="checkbox"></div>
+								<div class="cel"><input type="checkbox" name="" value="true"></div>
 							</div>
 						<% end %>
 					</div>
 					<div class="order-items-count-block">
 						<div class="col1">
-							<p class="category-count">Category Count: <span class="count-val">8</span></p>
+							<p class="category-count">Category Count: <span class="count-val"><%= category_count %></span></p>
 						</div>
 						<div class="col2">
-							<p class="category-total">Category Total: <span class="count-val">$840.00</span></p>
+							<p class="category-total">Category Total: <span class="count-val"><%= number_to_currency(category_total) %></span></p>
 						</div>
 					</div>
 				</div>
@@ -92,5 +99,6 @@
 			</div>
 			<div class="clear"></div>
 		</div>
-	</form>
+
+	<% end %>
 </div>
