Order Received button updates received information

--- a/app/views/spree/cust/customers/_customer_form.html.erb
+++ b/app/views/spree/cust/customers/_customer_form.html.erb
@@ -16,8 +16,8 @@
 </div>
 
 <div class="field">
-  <%= f.label :account_id %><br />
-  <%= f.number_field :account_id %>
+  <%= f.label :spree_account_id %><br />
+  <%= f.number_field :spree_account_id %>
 </div>
 
 <div class="field">
