Fix link 'Back to Catalog' in customer portal

--- a/app/views/spree/cust/products/show.html.erb
+++ b/app/views/spree/cust/products/show.html.erb
@@ -1,5 +1,5 @@
 <div class="search-area layout2">
-  <a href="<%= manage_products_url %>" class="cta-link">Back to Catalog</a>
+  <a href="<%= vendor_products_url(@product.vendor) %>" class="cta-link">Back to Catalog</a>
   <a href="<%= new_order_url %>" class="new-order-button">Start New Order</a>
 </div>
 <div class="clear"></div>
