--- a/app/views/spree/manage/shared/side_menu/category/_orders.html.erb
+++ b/app/views/spree/manage/shared/side_menu/category/_orders.html.erb
@@ -10,5 +10,6 @@
   <ul>
     <li><a href="<%= new_manage_order_url %>">Create New Order</a></li>
     <li><a href="<%= manage_orders_url %>">All Orders</a></li>
+    <li><a href="<%= manage_shippings_url %>">Deliveries</a></li>
   </ul>
 </div>
