--- a/app/views/spree/manage/shippings/edit.html.erb
+++ b/app/views/spree/manage/shippings/edit.html.erb
@@ -1,8 +1,8 @@
-<h1 class="tablet-center">Receiving</h1>
+<h1 class="tablet-center">Shipping</h1>
 <div class="inventory-page-block receiving-page-block">
 	<div class="receiving-header-block">
 		<div class="col1">
-			<%= @order.vendor.name %> <a href="" class="cta-link" id="expand_all">Expand all</a>
+			<%= @order.customer.name %> <a href="" class="cta-link" id="expand_all">Expand all</a>
 		</div>
 		<div class="col2">
 			<div class="orders-nav">
@@ -17,7 +17,7 @@
 		<div class="clear"></div>
 	</div>
 	<!-- <form action="#" id="receiving-form"> -->
-	<%= form_for @order, url: order_receiving_url(@order) do |f|%>
+	<%= form_for @order, url: manage_order_shipping_url(@order) do |f|%>
 		<div class="inventory-list-table">
 			<div class="tRow header">
 				<div class="cel">Item
@@ -41,12 +41,6 @@
 				<div class="cel">Total
 					<!-- <a href="" class="sort-total">Total<i class="fa fa-sort"></i></a> -->
 				</div>
-				<div class="cel">
-					Received
-				</div>
-				<div class="cel">
-					Confirm
-				</div>
 			</div>
 			<div class="order-items-block">
 				<div class="order-items-el" id="category_name_goes_here">
@@ -63,7 +57,6 @@
 							<p class="category-count">Shipped Category Count: <span class="count-val"><%= @order.line_items.sum(:shipped_qty) %></span></p>
 						</div>
 						<div class="col2">
-							<p class="category-total">Category Total: <span class="count-val"><%= number_to_currency(@order.total) %></span></p>
 							<p class="category-total">Category Total: <span class="count-val"><%= number_to_currency(@order.line_items.sum(:shipped_total)) %></span></p>
 						</div>
 					</div>
@@ -76,8 +69,8 @@
 				<textarea name="Notes" id="notes" placeholder="Notes"></textarea>
 			</div>
 			<div class="rightpart">
-        <%= submit_tag "Reject Order", class: "cta-button cancel", data: {confirm: "Are you sure you want to reject the ENTIRE order?"} %>
-				<input type="submit" value="order received">
+        <%= submit_tag "update", class: "cta-button cancel" %>
+				<%= submit_tag "confirm" %>
 			</div>
 			<div class="clear"></div>
 		</div>
