Invoice index and show page in vendor portal

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -2302,12 +2302,18 @@ img{
 .invoices-list-block .orders-list-table .tRow.header .cel {
     font-size: 16px;
 }
-.invoices-list-block  .orders-list-table .tRow:not(.header) .cel:first-child a {
-    color: #fd7e23;
-    text-decoration: underline;
+// .invoices-list-block  .orders-list-table .tRow:not(.header) .cel:first-child a {
+//     color: #fd7e23;
+//     text-decoration: underline;
+// }
+// .invoices-list-block  .orders-list-table .tRow:not(.header) .cel:first-child a:hover{
+//     text-decoration: none;
+// }
+.invoices-list-block  .orders-list-table a.tRow{
+	color: inherit;
 }
-.invoices-list-block  .orders-list-table .tRow:not(.header) .cel:first-child a:hover{
-    text-decoration: none;
+.invoices-list-block  .orders-list-table a.tRow:hover{
+	color: #FF7E00;
 }
 .inventory-page-block .inventory-list-table .cel {
 	width: 11%;
