--- a/app/views/spree/cust/invoices/show.html.erb
+++ b/app/views/spree/cust/invoices/show.html.erb
@@ -2,7 +2,7 @@
 <div class="inventory-page-block receiving-page-block">
 	<div class="receiving-header-block">
 		<div class="col1">
-			<%= @invoice.customer.name %> <a href="" class="cta-link" id="expand_all">Expand all</a>
+			<%= @invoice.vendor.name %> <a href="" class="cta-link" id="expand_all">Expand all</a>
 		</div>
 		<div class="col2">
 			<div class="orders-nav">
