Manage edit invoice

--- a/app/views/spree/manage/shared/side_menu/_side_menu.html.erb
+++ b/app/views/spree/manage/shared/side_menu/_side_menu.html.erb
@@ -4,11 +4,11 @@
 
   <div class="nav-block" id="accordion">
     <%= render 'spree/manage/shared/side_menu/category/overview' %>
+    <%= render 'spree/manage/shared/side_menu/category/invoices' %>
     <%= render 'spree/manage/shared/side_menu/category/orders' %>
     <%= render 'spree/manage/shared/side_menu/category/products' %>
     <%= render 'spree/manage/shared/side_menu/category/customers' %>
     <%= render 'spree/manage/shared/side_menu/category/my_account' %>
-    <%#= render 'spree/manage/shared/side_menu/category/invoices' %>
   </div>
 
 </aside>
