--- a/app/views/spree/manage/shared/side_menu/category/_invoices.html.erb
+++ b/app/views/spree/manage/shared/side_menu/category/_invoices.html.erb
@@ -1,7 +1,11 @@
+<a href="<%= manage_invoices_url %>">
 <h3>
   <%=image_tag("spree/manage/img/nav-ico4.png")%>
-  <span class="tablet-hide">Invoices <i class="fa fa-angle-left"></i></span>
+  <span class="tablet-hide">Invoices
+     <!-- <i class="fa fa-angle-left"></i> -->
+   </span>
 </h3>
+</a>
 <div class="accordion-block">
   <ul>
     <li><a href=""></a></li>
