--- a/app/assets/stylesheets/spree/cust/all.css
+++ b/app/assets/stylesheets/spree/cust/all.css
@@ -4,6 +4,7 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
 
  *= require spree/cust/vendor
+ *= require spree/cust/account
 
  *= require_tree .
  *= require_self
