Start sales by product

--- a/app/views/spree/manage/reports/index.html.erb
+++ b/app/views/spree/manage/reports/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Reports</h1>
 
-<%= high_chart("area_chart", @sales_overtime_chart) %>
+<%= high_chart("area_chart", @customer_sales_overtime_chart) %>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
