Chanage default coloring of bar and pie charts

--- a/app/views/spree/manage/reports/index.html.erb
+++ b/app/views/spree/manage/reports/index.html.erb
@@ -4,3 +4,4 @@
 <%= high_chart("prod_area_chart", @product_sales_overtime_chart) %>
 <%= high_chart('bar_chart', @product_sales_bar_chart) %>
 <!-- <script src="https://code.highcharts.com/modules/exporting.js"></script> -->
+<%= javascript_include_tag "spree/manage/js/chart_scripts.js" %>
