--- a/app/assets/javascripts/spree/manage/js/chart_scripts.js.erb
+++ b/app/assets/javascripts/spree/manage/js/chart_scripts.js.erb
@@ -13,3 +13,30 @@ $(".chart-block .tabs a").click(function(e){
 		}
 	};
 });
+
+
+Highcharts.getOptions().plotOptions.column.colors = (function () {
+	var colors = [],
+	base = Highcharts.getOptions().colors[0],
+	i;
+
+	for (i = 0; i < 10; i += 1) {
+		// Start out with a darkened base color (negative brighten), and end
+		// up with a much brighter color
+		colors.push(Highcharts.Color(base).brighten((i - 4) / 7).get());
+	}
+	return colors;
+}());
+
+Highcharts.getOptions().plotOptions.pie.colors = (function () {
+	var colors = [],
+	base = Highcharts.getOptions().colors[0],
+	i;
+
+	for (i = 0; i < 10; i += 1) {
+		// Start out with a darkened base color (negative brighten), and end
+		// up with a much brighter color
+		colors.push(Highcharts.Color(base).brighten((i - 4) / 7).get());
+	}
+return colors;
+}());
