--- a/app/views/spree/manage/shared/side_menu/_side_menu.html.erb
+++ b/app/views/spree/manage/shared/side_menu/_side_menu.html.erb
@@ -8,6 +8,7 @@
     <%= render 'spree/manage/shared/side_menu/category/orders' %>
     <%= render 'spree/manage/shared/side_menu/category/products' %>
     <%= render 'spree/manage/shared/side_menu/category/customers' %>
+    <%= render 'spree/manage/shared/side_menu/category/reports' %>
     <%= render 'spree/manage/shared/side_menu/category/my_account' %>
   </div>
 
