--- a/app/views/spree/manage/shared/side_menu/category/_overview.html.erb
+++ b/app/views/spree/manage/shared/side_menu/category/_overview.html.erb
@@ -1,13 +1,8 @@
 
 <a href="<%= manage_url %>">
-  <h3><%=image_tag("spree/manage/img/nav-ico1.png")%>
-    <span class="tablet-hide">Overview
+  <h3><%=image_tag("spree/manage/img/home.png")%>
+    <span class="tablet-hide">Home
       <!-- <i class="fa fa-angle-left"></i> -->
     </span>
   </h3>
 </a>
-<div class="accordion-block">
-  <ul>
-    <li><a href=""></a></li>
-  </ul>
-</div>
