--- a/app/views/spree/manage/shared/side_menu/category/_reports.html.erb
+++ b/app/views/spree/manage/shared/side_menu/category/_reports.html.erb
@@ -7,7 +7,8 @@
 
 <div class="accordion-block">
   <ul>
-    <li><a href="<%= manage_reports_url %>">Reports</a></li>
-    <li><a href="<%= manage_reports_url %>">Reports</a></li>
+
+    <li><a href="<%= manage_reports_customers_url %>">Customer Reports</a></li>
+    <li><a href="<%= manage_reports_products_url %>">Product Reports</a></li>
   </ul>
 </div>
