--- a/app/views/spree/manage/reports/customers.html.erb
+++ b/app/views/spree/manage/reports/customers.html.erb
@@ -1,15 +1,14 @@
 <h1>Customer Reports</h1>
 
-<%= high_chart("area_chart", @customer_sales_overtime_chart) %>
-<br>
+<%#= high_chart("area_chart", @customer_sales_overtime_chart) %>
+<div class="app-dash-widget">
+  <div class="chart-block">
+    <%= render 'spree/manage/root/app_dash_widget/chart_tabs' %>
 
-
-<div class="chart-block">
-  <%= render 'spree/manage/root/app_dash_widget/chart_tabs' %>
-
-  <div class="chart">
-    <%= high_chart("bar", @customer_sales_bar_chart) %>
-    <%= high_chart("pie", @customer_sales_pie_chart) %>
+    <div class="chart">
+      <%= high_chart("bar", @customer_sales_bar_chart) %>
+      <%= high_chart("pie", @customer_sales_pie_chart) %>
+    </div>
   </div>
 </div>
 <!-- <script src="https://code.highcharts.com/modules/exporting.js"></script> -->
